[package]
name = "hela-evm"
version = "1.0.6-testnet"
authors = ["HELA Labs"]
edition = "2018"
license = "Apache-2.0"
resolver = "2"
description = "HELA testnet"

[package.metadata.orc.release]
runtime-id = "00000000000000000000000000000000000000000000000064884141bb9ca059"

[package.metadata.orc.test]
runtime-id = "000000000000000000000000000000000000000000000000324f850f9a308d98"

[dependencies]
#oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "398c7891716b7d315a62ff426cebca9d008210eb" }
#module-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "398c7891716b7d315a62ff426cebca9d008210eb", package = "oasis-runtime-sdk-evm" }
oasis-runtime-sdk = { path = "../oasis-sdk/runtime-sdk" }
module-evm = { path = "../oasis-sdk/runtime-sdk/modules/evm", package = "oasis-runtime-sdk-evm" }

# Third party.
once_cell = "1.8.0"
